--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  border: 0;
+  margin: 0;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: #eaeaea;
+}
+
+.item-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+  gap: 1rem;
+
+  padding: 1rem;
+}
+
+.page-info {
+  padding: 1rem;
+  h3 {
+    margin-bottom: 1rem;
+  }
+
+  p {
+    max-width: 40rem;
+  }
+}
