Added categories, json, and products

--- a/src/app/components/hero-page/hero-page.component.html
+++ b/src/app/components/hero-page/hero-page.component.html
@@ -1,3 +1,108 @@
 <div class="hero-container">
   <img src="assets/pennmac.jfif" alt="" class="hero-img" />
+
+  <div class="section-description">
+    <h3>Deli</h3>
+    <p>
+      Explore our curated deli section- featuring sliced deli, cheese, and more
+      from around the world!
+    </p>
+  </div>
+
+  <!-- DELI SECTION -->
+  <div class="horizontal-scroll">
+    <app-category-card
+      image="assets/capicola.jpg"
+      category="Sliced Deli Meat"
+      description="Shop our curated deli section!"
+      link="/shop"
+    ></app-category-card>
+
+    <app-category-card
+      image="assets/sliced-deli-cheese.jpg"
+      category="Sliced Deli Cheese"
+      description="We have a wide variety of cheeses from all over the world."
+      link="/shop"
+    ></app-category-card>
+
+    <app-category-card
+      image="assets/pepperoni-stick.jpg"
+      category="Whole Pepperoni Sticks"
+      description="Shop our pepperoni!"
+      link="/shop"
+    ></app-category-card>
+
+    <app-category-card
+      image="assets/olives.jpg"
+      category="Olives"
+      description="Shop our olives!"
+      link="/shop"
+    ></app-category-card>
+
+    <app-category-card
+      image="assets/tray.jpg"
+      category="Party Trays"
+      description="Shop our pre-made party trays!"
+      link="/shop"
+    ></app-category-card>
+
+    <app-category-card
+      image="assets/spread.jpg"
+      category="Dips and Spreads"
+      description="Shop our dips, spreads and bruschetta!"
+      link="/shop"
+    ></app-category-card>
+  </div>
+
+  <div class="section-description">
+    <h3>Deli</h3>
+    <p>
+      Explore our curated deli section- featuring sliced deli, cheese, and more
+      from around the world!
+    </p>
+  </div>
+  <!-- DELI SECTION -->
+  <div class="horizontal-scroll">
+    <app-category-card
+      image="assets/capicola.jpg"
+      category="Sliced Deli Meat"
+      description="Shop our curated deli section!"
+      link="/shop"
+    ></app-category-card>
+
+    <app-category-card
+      image="assets/sliced-deli-cheese.jpg"
+      category="Sliced Deli Cheese"
+      description="We have a wide variety of cheeses from all over the world."
+      link="/shop"
+    ></app-category-card>
+
+    <app-category-card
+      image="assets/pepperoni-stick.jpg"
+      category="Whole Pepperoni Sticks"
+      description="Shop our pepperoni!"
+      link="/shop"
+    ></app-category-card>
+
+    <app-category-card
+      image="assets/olives.jpg"
+      category="Olives"
+      description="Shop our olives!"
+      link="/shop"
+    ></app-category-card>
+
+    <app-category-card
+      image="assets/tray.jpg"
+      category="Party Trays"
+      description="Shop our pre-made party trays!"
+      link="/shop"
+    ></app-category-card>
+
+    <app-category-card
+      image="assets/spread.jpg"
+      category="Dips and Spreads"
+      description="Shop our dips, spreads and bruschetta!"
+      link="/shop"
+    ></app-category-card>
+  </div>
 </div>
