--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,24 @@ body {
     max-width: 40rem;
   }
 }
+
+.horizontal-scroll {
+  display: flex;
+  gap: 1rem;
+  padding: 1rem;
+
+  overflow-x: auto;
+
+  &::-webkit-scrollbar {
+    height: 6px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 3px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+}
