--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <div class="navbar">
   <div class="m-top">
-    <img src="assets/hamburger.png" class="hamburger" alt="" />
+    <a routerLink="/admin"
+      ><img src="assets/hamburger.png" class="hamburger" alt=""
+    /></a>
 
     <a routerLink="/home"
       ><img src="assets/pennmac-logo.png" alt="" class="pennmac-logo"
