Updated assets references

--- a/src/app/components/shop-page/shop-page.component.html
+++ b/src/app/components/shop-page/shop-page.component.html
@@ -15,7 +15,7 @@
   <div class="item-list">
     <div *ngFor="let product of products">
       <app-product-card
-        image="{{ product.image }}"
+        image="assets/{{ product.image }}"
         title="{{ product.name }}"
         price="{{ product.price }}"
       ></app-product-card>
