Created item page

--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,5 +1,7 @@
 <div class="product-container">
-  <img src="{{ image }}" alt="" />
+  <a routerLink="/item">
+    <img src="{{ image }}" alt="" />
+  </a>
 
   <div class="text">
     <h3>{{ title }}</h3>
