--- a/src/app/components/admin/admin.component.scss
+++ b/src/app/components/admin/admin.component.scss
@@ -2,13 +2,10 @@ form {
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  justify-content: center;
-  width: 100%;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  justify-content: baseline;
+
+  width: 95%;
+  margin: 3rem auto;
 
   input {
     width: 100%;
