--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -5,7 +5,7 @@
 
   <div class="text">
     <h3>{{ title }}</h3>
-    <p>{{ price }}</p>
+    <p>${{ price }}</p>
     <button>Add to Cart</button>
   </div>
 </div>
