--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -6,6 +6,6 @@
   <div class="text">
     <h3>{{ title }}</h3>
     <p>${{ price }}</p>
-    <button>Add to Cart</button>
+    <button (click)="addToCart()">Add to Cart</button>
   </div>
 </div>
