Adjusted cart page

--- a/src/app/components/cart-dialog/cart-dialog.component.html
+++ b/src/app/components/cart-dialog/cart-dialog.component.html
@@ -4,6 +4,7 @@
     <div *ngFor="let item of cartItems">
       <p>{{ item.title }}</p>
       <p>{{ item.price | currency }}</p>
+      <button (click)="removeItem(item)">Remove</button>
     </div>
   </div>
 </mat-dialog-content>
