--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
       <a (click)="openCartDialog()">
         <img src="assets/cart-icon.svg" class="cart" alt="" />
       </a>
-      <p>{{ cartNumber }}</p>
+      <a (click)="openCartDialog()" class="number">{{ cartNumber }}</a>
     </div>
   </div>
 
