--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -68,7 +68,7 @@
   flex-direction: row;
   position: relative;
 
-  p {
+  .number {
     background-color: #950002;
     color: white;
     padding: 0.25rem;
