--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @use "@angular/material" as mat;
-
+@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 @include mat.core();
 
 * {
