--- a/src/app/components/cart-dialog/cart-dialog.component.html
+++ b/src/app/components/cart-dialog/cart-dialog.component.html
@@ -1,10 +1,15 @@
 <h2 mat-dialog-title>Shopping Cart</h2>
 <mat-dialog-content class="dialog-content">
   <div class="shopping-list">
-    <div *ngFor="let item of cartItems">
-      <p>{{ item.title }}</p>
-      <p>{{ item.price | currency }}</p>
-      <button (click)="removeItem(item)">Remove</button>
+    <div *ngFor="let item of cartItems" class="shopping-item">
+      <div class="left">
+        <img src="assets/olives.jpg" alt="" class="item-icon" />
+      </div>
+      <div class="right">
+        <p class="item-title">{{ item.title }}</p>
+        <p>{{ item.price | currency }}</p>
+      </div>
+      <button (click)="removeItem(item)" class="remove">X</button>
     </div>
   </div>
 </mat-dialog-content>
