--- a/src/app/components/cart-dialog/cart-dialog.component.scss
+++ b/src/app/components/cart-dialog/cart-dialog.component.scss
@@ -2,6 +2,13 @@
   min-width: 20vw;
 }
 
+.dialog-title {
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 1rem;
+  text-align: center;
+}
+
 .shopping-list {
   display: flex;
   flex-direction: column;
