Added store pickup icon and variables

--- a/src/app/components/hero-page/hero-page.component.html
+++ b/src/app/components/hero-page/hero-page.component.html
@@ -22,6 +22,7 @@
         image="assets/foccacia.jpg"
         title="Colangelo's Artichoke Foccacia"
         price="9.99"
+        [pickuponly]="true"
       ></app-product-card>
     </div>
 
