--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,11 +1,27 @@
 <div class="product-container">
   <a routerLink="/item">
-    <img src="{{ image }}" alt="" />
+    <div class="product-top">
+      <img
+        src="assets/store-pickup.ico"
+        alt=""
+        class="pickup-icon"
+        *ngIf="pickuponly"
+        [matTooltip]="pickuponly ? 'This item is store pickup only!' : ''"
+      />
+      <img src="{{ image }}" alt="" class="product-photo" />
+    </div>
   </a>
 
   <div class="text">
     <h3>{{ title }}</h3>
     <p>${{ price }}</p>
-    <button (click)="addToCart()">Add to Cart</button>
+    <div class="add-cart">
+      <button
+        (click)="addToCart()"
+        [matTooltip]="pickuponly ? 'This item is store pickup only!' : ''"
+      >
+        Add to Cart
+      </button>
+    </div>
   </div>
 </div>
