Added pickup only items and order type logic

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -44,6 +44,10 @@
         <option value="furniture">Trays</option>
       </select>
     </div>
+    <div class="">
+      <label for="pickupOnly">Pickup Only:</label>
+      <input type="checkbox" id="pickupOnly" name="pickupOnly" ngModel />
+    </div>
     <div>
       <button (click)="submitProduct()">Add Item</button>
     </div>
