Added a change type function to the cart dialog, logic to refresh and hide in store items if delivery

--- a/src/app/components/hero-page/hero-page.component.html
+++ b/src/app/components/hero-page/hero-page.component.html
@@ -22,7 +22,7 @@
         image="assets/foccacia.jpg"
         title="Colangelo's Artichoke Foccacia"
         price="9.99"
-        [pickuponly]="true"
+        [pickupOnly]="true"
       ></app-product-card>
     </div>
 
