--- a/src/app/components/cart-dialog/cart-dialog.component.html
+++ b/src/app/components/cart-dialog/cart-dialog.component.html
@@ -1,5 +1,6 @@
 <h2 mat-dialog-title class="dialog-title">Shopping Cart</h2>
 <p>Type: {{ orderType }}</p>
+<button (click)="changeType()">Change Order Type</button>
 <mat-dialog-content class="dialog-content">
   <div class="shopping-list">
     <div *ngFor="let item of cartItems" class="shopping-item">
