--- a/src/app/components/shop-page/shop-page.component.html
+++ b/src/app/components/shop-page/shop-page.component.html
@@ -15,10 +15,11 @@
   <div class="item-list">
     <div *ngFor="let product of products">
       <app-product-card
-        *ngIf="!(product.pickupOnly && cartService.ordertype === 'Delivery')"
+        *ngIf="!(product.pickupOnly && orderType === 'Delivery')"
         image="assets/{{ product.image }}"
         title="{{ product.name }}"
         price="{{ product.price }}"
+        [pickupOnly]="product.pickupOnly"
       ></app-product-card>
     </div>
   </div>
