--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,14 +1,19 @@
 .navbar {
   background-color: #f8f9fa;
-  border-bottom: 1px solid #e9ecef;
   padding: 0.5rem 1rem;
+  background-color: #015601;
 }
 
 .m-top {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
+  text-align: center;
+
+  a {
+    text-align: center;
+  }
 }
 
 .hamburger {
@@ -16,12 +21,11 @@
 }
 
 .cart {
-  filter: brightness(0);
-  height: 1.5rem;
+  height: 2rem;
 }
 
 .pennmac-logo {
-  height: 2rem;
+  max-height: 3rem;
 }
 
 .m-bot {
@@ -84,4 +88,72 @@
   }
 
   cursor: pointer;
+}
+
+.m-bot-two {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
+
+.menu-holder {
+  margin-right: auto;
+}
+
+.cart-holder {
+  margin-left: auto;
+}
+
+.menu-btn {
+  background-color: transparent;
+  height: 1.5rem;
+  border: none;
+  cursor: pointer;
+
+  img {
+    height: 2rem;
+  }
+
+  &:hover {
+    filter: brightness(0.8);
+    transition: 0.3s;
+  }
+}
+
+.contact-info {
+  background-color: #950002;
+  color: white;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  gap: 1rem;
+
+  img {
+    height: 1.2rem;
+  }
+
+  a {
+    color: white;
+    text-decoration: none;
+    padding: 5px;
+    border-radius: 5px;
+
+    &:hover {
+      background-color: #00000045;
+      transition: 0.3s;
+    }
+  }
+}
+
+.desktop-contact {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: flex;
+    gap: 1rem;
+  }
 }
