--- a/src/app/components/type-dialog/type-dialog.component.scss
+++ b/src/app/components/type-dialog/type-dialog.component.scss
@@ -21,7 +21,8 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  background-color: red;
+  background-color: #950002;
+  color: white;
   width: fit-content;
   border-radius: 10px;
 
