--- a/src/app/components/hero-page/hero-page.component.html
+++ b/src/app/components/hero-page/hero-page.component.html
@@ -1,5 +1,5 @@
 <div class="hero-container">
-  <img src="assets/pennmac-hero.png" alt="" class="hero-img" />
+  <img src="assets/PennmacHome.png" alt="" class="hero-img" />
 
   <div class="categories">
     <div class="section-description">
@@ -113,3 +113,5 @@
     </div>
   </div>
 </div>
+
+<app-bot-nav></app-bot-nav>
