--- a/src/app/components/type-dialog/type-dialog.component.html
+++ b/src/app/components/type-dialog/type-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="type-container">
   <h1>Welcome to Pennsylvania Macaroni Company!</h1>
-  <p>There are now three ways to shop PennMac!</p>
+  <p>There are now two ways to shop PennMac!</p>
   <div class="type-buttons">
     <!-- Delivery Type -->
     <div class="type-option" (click)="setType('Delivery')">
