--- a/src/app/components/cart-dialog/cart-dialog.component.scss
+++ b/src/app/components/cart-dialog/cart-dialog.component.scss
@@ -39,11 +39,14 @@
 .remove {
   background-color: rgb(155, 0, 0);
   color: white;
-  margin-left: auto;
-  height: 1rem;
-  width: auto;
-  border: none;
   border-radius: 5px;
+  margin-left: 1rem;
+  padding: 0.5rem;
+
+  img {
+    height: 1rem;
+    width: 1rem;
+  }
 
   &:hover {
     background-color: rgb(100, 0, 0);
@@ -66,7 +69,7 @@
   gap: 1rem;
 }
 
-button {
+.green-btn {
   background-color: rgb(0, 91, 0);
   color: white;
   border: none;
@@ -82,8 +85,22 @@ button {
 
 .cancel-btn {
   background-color: rgb(155, 0, 0);
+  color: white;
+  border: none;
+  border-radius: 15px;
+  padding: 0.5rem;
 
   &:hover {
     background-color: rgb(100, 0, 0);
+    cursor: pointer;
+    transition: 0.3s;
   }
+}
+
+.right {
+  margin-right: auto;
+}
+
+.checkout-btn {
+  margin-right: 1rem;
 }
